@@ -11,7 +11,13 @@ dh-make-perl (0.57) UNRELEASED; urgency=low
     file:/ URIs, add a test. Thanks to Raphael Geissert for the bug report
     (closes: #535017).
 
- -- Nathan Handler <nhandler@ubuntu.com>  Wed, 17 Jun 2009 13:24:08 +0000
+  [ Salvatore Bonaccorso ]
+  * Add myself to Uploaders 
+  * Correct test in t/AptContents.t for file: schema.
+  * Further improve gregoa's change and follow now that was apt-file is doing.
+    (See #535017). 
+
+ -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Fri, 03 Jul 2009 21:16:42 +0200
 
 dh-make-perl (0.56) unstable; urgency=low
 
